# proxy

./: .bazelrc  .gitignore  Cargo.toml  LICENSE  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: release.yml  test.yml
docs/: miracle-proxy.md
examples/: echo-server.rs  shadowsocks-client.toml  shadowsocks-local.toml  shadowsocks-server.toml  socks-client.toml  socks-server.toml
net/: BUILD  endpoint.h
net/proxy/: BUILD  connector.h  const.h  datagram.h  handler.h  proxy.cc  proxy.h  registry.cc  registry.h  stream.h  system.cc  system.h
net/proxy/ares/: BUILD  error-category.cc  error-category.h  resolver.cc  resolver.h  socket.cc  socket.h
net/proxy/echo/: BUILD  config.cc  handler.cc  handler.h
net/proxy/http/: BUILD  h2-connection.cc  h2-connection.h  tls-stream.cc  tls-stream.h
net/proxy/misc/: BUILD  config.cc  echo-handler.cc  echo-handler.h  null-handler.cc  null-handler.h  random-handler.cc  random-handler.h  zero-handler.cc  zero-handler.h
net/proxy/route/: BUILD  config.cc  connector.cc  connector.h  host-matcher.cc  host-matcher.h  host-matcher_test.cc
net/proxy/shadowsocks/: BUILD  config.cc  connector.cc  connector.h  decryptor.cc  decryptor.h  encryptor.cc  encryptor.h  handler.cc  handler.h  method.cc  method.h  method_test.cc  pre-shared-key.cc  pre-shared-key.h  salt-filter.cc  salt-filter.h  salt-filter_test.cc  session-subkey.cc  session-subkey.h
net/proxy/socks/: BUILD  config.cc  connector.cc  connector.h  handler.cc  handler.h
net/proxy/system/: BUILD  config.cc  connector.cc  connector.h  listener.cc  listener.h  stdio-stream.cc  stdio-stream.h  tcp-socket-stream.cc  tcp-socket-stream.h  udp-socket-datagram.cc  udp-socket-datagram.h
net/proxy/util/: BUILD  config.cc  config.h  copy.cc  copy.h  stream-wrapper.h  write.cc  write.h
net/shadowsocks/: BUILD  aead-crypto.cc  aead-crypto.h  aes-crypto.cc  aes-crypto.h  encryption.cc  encryption.h  hash-filter.cc  hash-filter.h  hash-filter_benchmark.cc  hash-filter_stats.cc  hash-filter_test.cc  tcp-server.cc  tcp-server.h  udp-server.cc  udp-server.h  wire-structs.h
net/socks/: BUILD  tcp-server.cc  tcp-server.h  wire-structs.h
net/stream/: BUILD  reader.cc  reader.h
net/tools/: BUILD  ares-resolve.cc  http-server.cc  icmp-scanner.cc  miracle-proxy.cc  rpc-benchmark.cc  rpc-client.cc  rpc-relay.cc  rpc-server.cc  shadowsocks-server.cc  socks-server.cc
src/: constants.rs  lib.rs  listener.rs  main.rs  proxy.rs  registry.rs  traits.rs  util.rs
src/configs/: echo.rs  mod.rs  route.rs  shadowsocks.rs  socks.rs  system.rs
src/connectors/: mod.rs  route.rs  shadowsocks.rs  socks.rs  system.rs
src/handlers/: echo.rs  mod.rs  shadowsocks.rs  socks.rs
src/protocols/: shadowsocks.rs
sys/tools/: BUILD  base64.cc
tools/bazel/: BUILD  cc_toolchain_config.bzl
util/: BUILD  int-allocator.h  int-allocator_test.cc
