[workspace]
resolver = "2"

[package]
name = "proxy"
edition = "2021"

[[example]]
name = "echo-server"

[dependencies]
async-trait = "0.1"
bpaf = { version = "0.9", features = ["bpaf_derive"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
