[workspace]
resolver = "2"

[package]
name = "proxy"
version = "0.3.0"
authors = ["iceboy"]
edition = "2021"

[[example]]
name = "echo-server"

[dependencies]
async-trait = "0.1"
bpaf = { version = "0.9", features = ["bpaf_derive"] }
bytes = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
simple_logger = "5"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt"] }
toml = { version = "1" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
