[workspace]
resolver = "2"

[package]
name = "proxy"
version = "0.3.0"
authors = ["iceboy"]
edition = "2021"

[[example]]
name = "echo-server"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
bpaf = { version = "0.9", features = ["bpaf_derive"] }
bytes = "1"
fst = "0.4"
futures-util = { version = "0.3", features = ["sink"] }
hkdf = "0.13"
log = "0.4"
md-5 = "0.11"
rand = "0.10"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
sha1 = "0.11"
simple_logger = "5"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "rt"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = { version = "1" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
