module(name = "proxy")

bazel_dep(name = "abseil-cpp", version = "20250127.1")
bazel_dep(name = "blake3", version = "1.5.4.bcr.1")
bazel_dep(name = "boost.asio", version = "1.87.0.bcr.1")
bazel_dep(name = "boost.endian", version = "1.87.0")
bazel_dep(name = "boost.log", version = "1.87.0")
bazel_dep(name = "boost.property_tree", version = "1.87.0")
bazel_dep(name = "boost.smart_ptr", version = "1.87.0")
bazel_dep(name = "boringssl", version = "0.20250311.0")
bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1")

bazel_dep(name = "trunk")

git_override(
    module_name = "trunk",
    commit = "a9fe57d9083edb37b90b8b3471ce255a83d3cb5f",
    remote = "https://github.com/iceboy233/trunk.git",
)
